[gd_scene load_steps=2 format=3]

[ext_resource path="res://src/world/environment/environment_controller.gd" type="Script" id=1]

[node name="Environment" type="Node2D"]
unique_name_in_owner = true
script = ExtResource(1)

[node name="Background" type="Polygon2D" parent="."]
z_index = -200
color = Color(0.2, 0.3, 0.4, 1)

[node name="Ground" type="Polygon2D" parent="."]
z_index = -150
color = Color(1, 1, 1, 1)

[node name="DecorContainer" type="Node2D" parent="."]
z_index = -50

[node name="BorderOverlay" type="Node2D" parent="."]
z_index = -140

[node name="FogOverlay" type="ColorRect" parent="."]
mouse_filter = 2
color = Color(0.8, 0.85, 0.95, 0)

[node name="EnvironmentOverlay" type="Node2D" parent="."]
z_index = 60
top_level = true
z_as_relative = false

[node name="VignetteOverlay" type="ColorRect" parent="EnvironmentOverlay"]
mouse_filter = 2
visible = false
color = Color(0, 0, 0, 0)
z_index = 200

[node name="SnowOverlay" type="Polygon2D" parent="EnvironmentOverlay"]
z_index = 50

[node name="SakuraOverlay" type="Polygon2D" parent="EnvironmentOverlay"]
visible = false
z_index = 48

[node name="SnowPiles" type="Node2D" parent="."]
z_index = -45

[node name="SnowParticles" type="Node2D" parent="."]
z_index = -40

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(1, 1, 1, 1)

[node name="SunLight" type="DirectionalLight2D" parent="."]
color = Color(1, 0.95, 0.85, 1)
energy = 1.0
editor_only = false
